# winit-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
fixtures/: case_21SC085289.html  case_25TR080266.html  case_C2502897.html  john_smith_search.html  jose_garcia_search.html
models/: schemas.py
services/: search.py
tests/: test_api.py
utils/: parser.py
